--- a/mpls-dwdm.tex
+++ b/mpls-dwdm.tex
@@ -484,7 +484,7 @@
 % in the abstract or keywords.
 \IEEEtitleabstractindextext{%
 \begin{abstract}
-
+En este trabajo se estudia los estándares de red MPLS diseñado para unificar el servicio de transporte de datos para las redes y  DWDM que es una técnica de transmisión de señales por medio de fibra óptica que utiliza la banda C.
 \end{abstract}
 
 % Note that keywords are not normally used for peerreview papers.
@@ -550,7 +550,7 @@
 % 
 % Here we have the typical use of a "T" for an initial drop letter
 % and "HIS" in caps to complete the first word.
-\IEEEPARstart{L}{as} 
+\IEEEPARstart{L}{as} demandas actuales en las redes se vuelven mas exigentes donde es necesario traer nuevas tecnologías que puedan soportar las redes. Una red es un conjunto de dispositivos conectados entre si que se utiliza como canales de transmisión de datos. La fibra óptica es una solución para la transmisión de datos donde los primeros sistemas eran sencillos cuyo fin era transmitir información mediante hebras de vidrio que transmitían pulsaciones de luz. A medida que se aumenta la necesidad de información es necesario aumentar el ancho de banda por lo tanto nacen técnicas como DWDM para transmitir señales y MPLS como mecanismo de transporte. 
 
 
 \section {MPLS}
@@ -655,11 +655,6 @@ hardware y datos eficientes para implementar sus tablas de reenvío, obteniendo 
 Algunas de las ventajas del reenvió de etiquetas es que las mismas pueden ser realizadas por conmutadores de baja capacidad además de que la asignación de FEC  puede hacerse en base a información disponible del paquete como  por ejemplo el puerto de origen o el enrutador de entrada. También  los criterios para asignar el FEC pueden volverse complejos sin necesidad de afectar a los enrutadores. En ingeniería de trafico, el uso de la etiqueta es fundamental pues esta es usada para indicar el flujo de los paquetes de forma prioritaria. 
 También cabe destacar que algunos enrutadores pueden analizar la cabecera del paquete para determinar la prioridad o la clase del servicio y no solo el salto que este debe dar. 
 
-\section{Ingeniería de trafico MPLS}
-
-
-
-\subsection{Fast reroute}
 
 %\begin{figure*}[h]
 %    \center
@@ -836,7 +831,9 @@ Las señales DWDM pueden ser amplificadas, haciendo este sistema el ideal para c
 
 \section{Conclusión}
 
-
+ MPLS fue diseñado para unificar el servicio de transporte de datos para las redes .MPLS hoy en dia es una solución de mayor alcance, donde se necesitan reducir costos, aumentar la productividad y poder soportar mas aplicaciones en la nube tomando en cuenta la seguridad llevan a muchas empresas actualmente a implementar MPLS. MPLS tiene la capacidad de integrar voz, vídeo y datos en una plataforma común con calidad brindando además rendimiento y escalabilidad de servicios, esto pues MPLS permite empaquetar mas datos en el ancho de banda disponible y disminuir requerimientos a nivel de router.
+ 
+ DWDM es una técnica de transmisión de señales por medio de fibra óptica que utiliza la banda C que introduce mas longitudes de onda distintas en cada fibra y por esta razón es actualmente una de las técnicas mas implementadas , permitiendo fabricación a gran escala, disminución de costos, mejorar en la transmisión de fibra, implementación de diferentes técnicas de fabricación e implementación en redes de larga distancia.  
 
 
 
