--- a/mpls-dwdm.tex
+++ b/mpls-dwdm.tex
@@ -665,7 +665,7 @@ También cabe destacar que algunos enrutadores pueden analizar la cabecera del p
 
 
 \section{DWDM}
-El crecimiento exploito del Internet y de aplicaciones basadas en el protocolo de Internet (IP) tales como voz, video y redes de área de almacenamiento (SAN, por sus siglas en inglés) ha impulsado las demandas de ancho de banda de muchas organizaciones. Con las velocidades de redes LAN en el rango de los 10Mbps a los 10Gbps, y la calidad de servicio (QoS) jugando un rol importante en la entrega de estos datos, debe de existir un alternativa a servicios WAN y LAN para conectar redes de área metropolitana (MAN). Las conexiones de red que tradicionalmente llevaban velocidades de datos \textsc{T1} y \textsc{T3} ahora requieren de canal de fibra, \emph{Enterprise System Connection} (ESCON), Gigabit Ethernet y 10 Gigabit Ethernet para satisfacer la demanda. El aumento en la demando, junto con los avances en la tecnología óptica han aumentado drásticamente la capacidad y reducción de costos, haciendo más atractivo a los proveedores de servicios ofrecer servicios de red basedos en fibra para el mercado metropolitano. 
+El crecimiento explosivo del Internet y de aplicaciones basadas en el protocolo de Internet (IP) tales como voz, video y redes de área de almacenamiento (SAN, por sus siglas en inglés) ha impulsado las demandas de ancho de banda de muchas organizaciones. Con las velocidades de redes LAN en el rango de los 10Mbps a los 10Gbps, y la calidad de servicio (QoS) jugando un rol importante en la entrega de estos datos, debe de existir un alternativa a servicios WAN y LAN para conectar redes de área metropolitana (MAN). Las conexiones de red que tradicionalmente llevaban velocidades de datos \textsc{T1} y \textsc{T3} ahora requieren de canal de fibra, \emph{Enterprise System Connection} (ESCON), Gigabit Ethernet y 10 Gigabit Ethernet para satisfacer la demanda. El aumento en la demando, junto con los avances en la tecnología óptica han aumentado drásticamente la capacidad y reducción de costos, haciendo más atractivo a los proveedores de servicios ofrecer servicios de red basedos en fibra para el mercado metropolitano. 
 
 Las redes metropolitanas basadas en fibra abordan necesidades de negociones en tres áreas:
 \begin{enumerate}
